feat: Add category CRUD
Implement create, read, update, delete dashboard for categories
Implement view-only category list

--- a/templates/categories/list_multiple.html
+++ b/templates/categories/list_multiple.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Story Site | Home</title>
+  <title>Story Site | Categories</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -24,11 +24,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Home</h1>
+            <h1>Categories</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item active">Home</li>
+				<li class="breadcrumb-item"><a href="/">Home</a></li>
+				<li class="breadcrumb-item active">Categories</li>
             </ol>
           </div>
         </div>
@@ -41,33 +42,9 @@
       <!-- Default box -->
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">New Stories</h3>
-
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-              <i class="fas fa-minus"></i>
-            </button>
-          </div>
+          <h3 class="card-title">Available Categories</h3>
         </div>
-        <div class="card-body">
-          Populate with recently published stories (i.e. new stories, not new chapters)
-        </div>
-        <!-- /.card-body -->
-      </div>
-      <!-- /.card -->
-        <!-- Default box -->
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">New Chapters</h3>
-
-          <div class="card-tools">
-            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-              <i class="fas fa-minus"></i>
-            </button>
-          </div>
-        </div>
-        <div class="card-body">
-          Populate with recently published chapters (i.e. new chapters, not new stories)
+        <div class="card-body" id="categories">
         </div>
         <!-- /.card-body -->
       </div>
@@ -87,5 +64,47 @@
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/dist/js/adminlte.min.js"></script>
+<!-- AJAX Script -->
+<script>
+	$(document).ready(function() {
+		$.get("/categories/all", function(data) {
+			const selector = $('#categories');
+			html_string = "<div class='row'>"
+			let contains = 0;
+			for (const jsonDataKey in data['categories']) {
+				const cw = {
+					0: "All Ages",
+					1: "Teens and Above",
+					2: "Adults Only"
+				}
+				const cw_colours = {
+					0: "bg-success",
+					1: "bg-warning",
+					2: "bg-danger"
+				}
+				const content_warning = data['categories'][jsonDataKey]['content_warning']
+				html_string += `<div class="col-sm-4">
+                    <div class="position-relative p-3 bg-gray" style="height: 180px">
+                      <div class="ribbon-wrapper ribbon-lg">
+                        <div class="ribbon ${cw_colours[content_warning]} text-lg">
+                          ${cw[content_warning]}
+                        </div>
+                      </div>
+                      <h3>${data['categories'][jsonDataKey]['name']}</h3><br>
+					  ${data['categories'][jsonDataKey]['description']}
+                    </div>
+                  </div>
+				`
+				contains += 1
+				if(contains % 3 === 0) {
+					html_string += `</div>
+					<div class="row mt-4">
+					`
+				}
+			selector.html(html_string)
+			}
+		})
+	})
+</script>
 </body>
 </html>
