--- a/templates/categories/cat_admin.html
+++ b/templates/categories/cat_admin.html
@@ -317,7 +317,7 @@
             }
         });
 	}
-	$(document).ready(function() {
+	$(window).on('load', function() {
 		refresh()
 	})
 	function show_edit_form(id) {
