feat: Implement overlay
Implement loading overlay for user data

--- a/templates/users/user_list_multiple.html
+++ b/templates/users/user_list_multiple.html
@@ -60,6 +60,9 @@
             </table>
         </div>
         <!-- /.card-body -->
+        <div class="overlay">
+            <i class="fas fa-2x fa-sync-alt fa-spin"></i>
+        </div>
       </div>
       <!-- /.card -->
     </section>
@@ -105,7 +108,8 @@
     }
 	$(window).on('load', function() {
 		refresh()
-	})
+        $('div').remove('.overlay')
+    })
 </script>
 </body>
 </html>
