--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -45,6 +45,14 @@
               </p>
             </a>
           </li>
+        <li class="nav-item">
+            <a href="/users/" class="nav-link">
+                <i class="nav-icon fas fa-users"></i>
+                <p>
+                    Users
+                </p>
+            </a>
+        </li>
 			{% if g.user.role == 2 %}
 			<li class="nav-header">ADMINISTRATION</li>
 				<li class="nav-item">
