feat: Add story view page
Add page for users to view all public stories on the site

--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -46,6 +46,14 @@
             </a>
           </li>
         <li class="nav-item">
+            <a href="/stories/" class="nav-link">
+              <i class="nav-icon fas fa-book-open"></i>
+              <p>
+                Stories
+              </p>
+            </a>
+          </li>
+        <li class="nav-item">
             <a href="/users/" class="nav-link">
                 <i class="nav-icon fas fa-users"></i>
                 <p>
