--- a/templates/stories/story_recent.html
+++ b/templates/stories/story_recent.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% include "template/pace.html" %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Story Site | User List</title>
+  <title>Story Site | Recent Stories</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -28,12 +29,13 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Stories</h1>
+            <h1>Recent Stories</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
 				<li class="breadcrumb-item"><a href="/">Home</a></li>
-				<li class="breadcrumb-item active">Stories</li>
+				<li class="breadcrumb-item">Stories</li>
+                <li class="breadcrumb-item active">Recent</li>
             </ol>
           </div>
         </div>
@@ -41,34 +43,7 @@
     </section>
 
     <!-- Main content -->
-    <section class="content">
-
-      <!-- Default box -->
-      <div class="card">
-        <div class="card-header">
-          <h3 class="card-title">Published Stories</h3>
-        </div>
-        <div class="card-body">
-            <table class="table table-hover table-bordered">
-                <thead>
-                    <tr>
-                        <th style="width: 25%">Title</th>
-                        <th style="width: 30%">Author</th>
-                        <th style="width: 25%">Categories</th>
-                        <th style="width: 20%">Description</th>
-                    </tr>
-                </thead>
-                <tbody id="stories">
-
-                </tbody>
-            </table>
-        </div>
-        <!-- /.card-body -->
-        <div class="overlay">
-            <i class="fas fa-2x fa-sync-alt fa-spin"></i>
-        </div>
-      </div>
-      <!-- /.card -->
+    <section class="content" id="stories">
     </section>
     <!-- /.content -->
   </div>
@@ -100,9 +75,11 @@
 <!-- AJAX Script -->
 <script>
     function refresh() {
-        $.get("/users/all", function(data) {
-			const selector = $('#users');
-			let html_string = ""
+        $.get("/stories/recent-json", function(data) {
+			const selector = $('#stories');
+			let html_string = "<div class='row'>"
+            let contains = 0
+            console.log(data)
 			for (const jsonDataKey in data['stories']) {
 				const story = data['stories'][jsonDataKey]
                 let category_string = ""
@@ -110,24 +87,31 @@
                     category = story['categories'][categoryDataKey]
                     category_string += `<a href='${category}'>${category}</a> `
                 }
-				html_string += `<tr>
-                <td><a href='/stories/${story['url_slug']}'>${story['title']}</a></td>
-                <td><a href='/users/${story['author']}'>${story['author']}</a></td>
-                <td>${category_string}</td>
-                <td>${story['description']}</td>
-                </tr>
-				`
+				html_string += `<div class="col-md-6">
+            <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">
+                  ${story['title']} by <a href='${story['author']}'>${story['author']}</a>
+                </h3>
+              </div>
+              <div class="card-body">
+                <dl>
+                  <dt>Categories</dt>
+                  <dd>${category_string}</dd>
+                  <dt>Description</dt>
+                  <dd>${story['description']}</dd>
+                  <dt><a href='/stories/${story['url_slug']}'>Read more...</a></dt>
+                </dl>
+              </div>
+            </div>
+          </div>`
 			}
+			contains += 1
+            if(contains % 2 == 0) {
+                html_string += "</div><div class='row'>"
+            }
             selector.html(html_string)
-            $(".table").DataTable({
-                "responsive": true,
-                "lengthChange": false,
-                "autoWidth": false,
-                "bSort": false,
-                "pageLength": 50
-            })
 		})
-        $('div').remove('.overlay')
         return "Complete"
     }
 	$(window).on('load', function() {
