--- a/templates/stories/story_chapter.html
+++ b/templates/stories/story_chapter.html
@@ -63,6 +63,19 @@
         $.get("/stories/{{ s.url_slug }}/{{ c.url_slug }}-json", function(data) {
 			const story = data['story']
             const chapter = data['chapter']
+            let position_buttons = ``
+            if(typeof chapter['next'] !== 'undefined' || typeof chapter['prev'] !== 'undefined') {
+                position_buttons += "<div class='card-footer'><div class='row'>"
+                if(typeof chapter['next'] === 'undefined' && typeof chapter['prev'] !== 'undefined') {
+                    position_buttons += `<a href='/stories/${story['url_slug']}/${chapter['prev']}' class='btn btn-outline-info col-sm-10 offset-sm-1'><i class='fas fa-arrow-circle-left'></i></a>`
+                } else if(typeof chapter['next'] !== 'undefined' && typeof chapter['prev'] === 'undefined') {
+                    position_buttons += `<a href='/stories/${story['url_slug']}/${chapter['next']}' class='btn btn-outline-info col-sm-10 offset-sm-1'><i class='fas fa-arrow-circle-right'></i></a>`
+                } else {
+                    position_buttons += `<a href='/stories/${story['url_slug']}/${chapter['prev']}' class='btn btn-outline-info col-sm-4 offset-sm-1'><i class='fas fa-arrow-circle-left'></i></a>
+<a href='/stories/${story['url_slug']}/${chapter['next']}' class='btn btn-outline-info col-sm-4 offset-sm-2'><i class='fas fa-arrow-circle-right'></i></a>`
+                }
+                position_buttons += "</div></div>"
+            }
             const categories = story['categories']
             let categories_html = ``
             for (const categoriesDataKey in categories) {
@@ -112,6 +125,7 @@
                   <dd class="col-sm-8">${chapter['last_modified']}</dd>
                 </dl>
 </div>
+${position_buttons}
 </div>
 </div>
 </div>`
@@ -129,6 +143,7 @@
 <dl class="row">
 ${chapter['content']}
 </div>
+${position_buttons}
 </div>
 </div>
 </div>`
