feat: Implement A-Z searching
Users can select a letter that a story starts with, and can then view stories which start with that letter

--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -45,13 +45,28 @@
               </p>
             </a>
           </li>
-        <li class="nav-item">
-            <a href="/stories/" class="nav-link">
+        <li class="nav-item tree-menu">
+            <a href="#" class="nav-link">
               <i class="nav-icon fas fa-book-open"></i>
               <p>
                 Stories
+                  <i class="fas fa-angle-left right"></i>
               </p>
             </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="/stories/" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Recent</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/stories/az" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>A-Z Search</p>
+                </a>
+              </li>
+            </ul>
           </li>
         <li class="nav-item">
             <a href="/users/" class="nav-link">
