style: Update all pages to use dark mode
Dark mode is easier on the eyes for users than light mode, so I updated all pages to use dark mode

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,7 +14,7 @@
   <!-- Toastr -->
   <link rel="stylesheet" href="/plugins/toastr/toastr.min.css">
 </head>
-<body class="hold-transition login-page">
+<body class="hold-transition dark-mode login-page">
 <div class="login-box">
   <!-- /.login-logo -->
   <div class="card card-outline card-primary">
