--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -17,7 +17,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css">
 </head>
-<body class="hold-transition register-page">
+<body class="hold-transition dark-mode register-page">
 <div class="register-box">
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
