--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css">
 </head>
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition dark-mode sidebar-mini">
 <!-- Site wrapper -->
 <div class="wrapper">
     {% include "template/nav.html" with context %}
