--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -37,7 +37,15 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-		<li class="nav-item">
+          <li class="nav-item">
+              <a href="/authors/" class="nav-link">
+                  <i class="nav-icon fas fa-pencil-alt"></i>
+                  <p>
+                      Author Area
+                  </p>
+              </a>
+          </li>
+          <li class="nav-item">
             <a href="/categories/" class="nav-link">
               <i class="nav-icon fas fa-swatchbook"></i>
               <p>
