fix: Remove bug where categories navigation item was not active

--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -52,7 +52,7 @@
               </a>
           </li>
           <li class="nav-item">
-            <a href="/categories/" class="nav-link">
+            <a href="/categories/" class="nav-link {% if g.category == "categories" %}active{% endif %}">
               <i class="nav-icon fas fa-swatchbook"></i>
               <p>
                 Categories
