feat: Implement story creation

--- a/templates/stories/story_chapter.html
+++ b/templates/stories/story_chapter.html
@@ -140,9 +140,9 @@ ${position_buttons}
 </div>
 </div>
 <div class="card-body">
-<dl class="row">
+<p>
 ${chapter['content']}
-</div>
+</p></div>
 ${position_buttons}
 </div>
 </div>
