--- a/templates/authors/author_new_story.html
+++ b/templates/authors/author_new_story.html
@@ -70,6 +70,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label for="inputMultipleChapters" class="col-sm-2 col-form-label">Chapter Mode</label>
+                    <div class="col-sm-10">
+                        <input type="checkbox" id="inputMultipleChapters" data-bootstrap-switch data-off-color="danger" data-on-color="success">
+                    </div>
+                </div>
+                <div class="form-group row">
                     <div class="offset-sm-2 col-sm-10">
                         <button id="inputSubmit" type="submit" class="btn btn-default">Submit</button>
                     </div>
@@ -96,6 +102,8 @@
 <script src="/plugins/toastr/toastr.min.js"></script>
 <!-- Select2 -->
 <script src="/plugins/select2/js/select2.full.min.js"></script>
+<!-- Bootstrap Switch -->
+<script src="/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/dist/js/adminlte.min.js"></script>
 <!-- AJAX script -->
@@ -104,29 +112,44 @@
         $.get({
             url: "/categories/all",
             success: function(data) {
-                categories = data['categories']
+                const categories = data['categories']
                 for (const categoriesKey in categories) {
                     $('#inputCategories').append(`<option value='${categories[categoriesKey]['id']}'>${categories[categoriesKey]['name']}`)
                 }
             }
         })
         $('#inputCategories').select2()
+        $('#inputMultipleChapters').bootstrapSwitch('state', $('#inputMultipleChapters').prop('checked'))
     })
-    $('#profileForm').submit(function updateProfile() {
-        $.ajax({
-            type: "PATCH",
-            url: '/users/settings/profile',
-            data: {
-                education: $('#inputEducation').val(),
-                location: $('#inputLocation').val(),
-                skills: $('#inputSkills').val(),
-                notes: $('#inputNotes').val()
-            },
-            success: function (data) {
-                toastr.success("Profile settings updated successfully.")
+    $('#newStoryForm').submit(function createStory() {
+        try {
+            let raw_categories = $('#inputCategories').select2('data')
+            let categories = []
+            for (const categoriesKey in raw_categories) {
+                categories.push(raw_categories[categoriesKey]['id'])
             }
-        })
-        return false;
+            $.ajax({
+                type: "PUT",
+                url: '/authors/new',
+                data: {
+                    title: $('#inputTitle').val(),
+                    description: $('#inputDescription').val(),
+                    categories: categories,
+                    multiple_chapters: $('#inputMultipleChapters').prop('checked')
+                },
+                success: function (data) {
+                    if(data['multiple_chapters'] === true) {
+                        window.location.replace(`/authors/new/${data['slug']}`)
+                    } else {
+                        window.location.replace(`/authors/edit/${data['slug']}`)
+                    }
+                }
+            })
+            return false
+        } catch (e) {
+            console.log(e)
+            return false
+        }
     })
 </script>
 </body>
