--- a/templates/template/nav.html
+++ b/templates/template/nav.html
@@ -44,7 +44,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-              <a href="/authors/" class="nav-link">
+              <a href="/authors/" class="nav-link {% if g.category == 'authors' %}active{% endif %}">
                   <i class="nav-icon fas fa-pencil-alt"></i>
                   <p>
                       Author Area
